# thrift

./: configure.ac
aclocal/: ax_dmd.m4
compiler/cpp/: Makefile.am
compiler/cpp/src/generate/: t_d_generator.cc
lib/cpp/test/: Benchmark.cpp
lib/d/: Makefile.am  README
lib/d/src/thrift/: base.d  codegen.d  hashset.d  index.d
lib/d/src/thrift/async/: base.d  libevent.d  socket.d
lib/d/src/thrift/c/: loader.d
lib/d/src/thrift/c/event/: README  event.d  event_compat.d  loader.d
lib/d/src/thrift/c/openssl/: README  asn1.d  bio.d  crypto.d  err.d  loader.d  objects.d  rand.d  safestack.d  ssl.d  stack.d  x509.d  x509_vfy.d  x509v3.d
lib/d/src/thrift/codegen/: async_client.d  async_client_pool.d  base.d  client.d  client_pool.d  idlgen.d  processor.d
lib/d/src/thrift/internal/: algorithm.d  codegen.d  ctfe.d  endian.d  resource_pool.d  socket.d  traits.d
lib/d/src/thrift/internal/c/: loader.d
lib/d/src/thrift/internal/c/event/: README  event.d  event_compat.d  loader.d
lib/d/src/thrift/internal/c/openssl/: README  asn1.d  bio.d  crypto.d  err.d  loader.d  objects.d  rand.d  safestack.d  ssl.d  stack.d  x509.d  x509_vfy.d  x509v3.d
lib/d/src/thrift/internal/test/: protocol.d  server.d
lib/d/src/thrift/protocol/: base.d  binary.d  compact.d  json.d  processor.d
lib/d/src/thrift/server/: base.d  nonblocking.d  simple.d  taskpool.d  threaded.d
lib/d/src/thrift/server/transport/: base.d  socket.d  ssl.d
lib/d/src/thrift/transport/: base.d  buffered.d  file.d  framed.d  http.d  memory.d  piped.d  range.d  server.d  serversocket.d  socket.d  ssl.d  zlib.d
lib/d/src/thrift/util/: awaitable.d  cancellation.d  endian.d  future.d  hashset.d  loader.d  resource_pool.d  socket.d
lib/d/src/thrift/util/event/: README  event.d  event_compat.d  loader.d
lib/d/src/thrift/util/openssl/: README  asn1.d  bio.d  crypto.d  err.d  loader.d  objects.d  rand.d  safestack.d  ssl.d  stack.d  x509.d  x509_vfy.d  x509v3.d
lib/d/test/: Makefile.am  async_test.d  async_test_client.d  async_test_common.d  async_test_server.d  client_pool_test.d  serialization_benchmark.d  stress_test_server.d  test_utils.d  thrift_test_client.d  thrift_test_common.d  thrift_test_runner.sh  thrift_test_server.d  transport_test.d
lib/d/test/StressTest/: Makefile.am  server.d
lib/d/test/ThriftTest/: Makefile.am  client.d  common.d  server.d
lib/d/test/serialization_benchmark/: Makefile.am  README  benchmark.d
test/: ConstantsDemo.thrift
tutorial/: shared.thrift
tutorial/d/: Makefile  async_client.d  client.d  server.d
